Correct lateral spacing of card-layout @small size

--- a/src/assets/custom/css/_sass/_cards-layout.scss
+++ b/src/assets/custom/css/_sass/_cards-layout.scss
@@ -14,8 +14,8 @@
     $spacing-around-cards;
 
   .cards-layout {
-    margin-left: -$spacing-around-cards;
-    margin-right: -$spacing-around-cards;
+    padding-left: 0;
+    padding-right: 0;
     overflow-x: scroll;
     overflow-y: hidden;
   }
